--- a/.travis.yml
+++ b/.travis.yml
@@ -10,26 +10,27 @@ env:
     - TAG=3.3 MATOMO_VER=3.3.0 EXTRA_TAG=3
 
 script:
-  - travis_retry make && make test
+  - |
+    travis_retry make
+    make test
 
-after_success: |
-  if [[ "${TRAVIS_PULL_REQUEST}" == "false" && ("${TRAVIS_BRANCH}" == "master"  || -n "${TRAVIS_TAG}") ]]; then
-    docker login -u "${DOCKER_USERNAME}" -p "${DOCKER_PASSWORD}"
+    if [[ "${TRAVIS_PULL_REQUEST}" == "false" && ("${TRAVIS_BRANCH}" == "master"  || -n "${TRAVIS_TAG}") ]]; then
+      docker login -u "${DOCKER_USERNAME}" -p "${DOCKER_PASSWORD}"
 
-    if [[ -n "${TRAVIS_TAG}" ]]; then
-      export STABILITY_TAG="${TRAVIS_TAG}"
+      if [[ -n "${TRAVIS_TAG}" ]]; then
+        export STABILITY_TAG="${TRAVIS_TAG}"
+      fi
+
+      if [[ -n "${EXTRA_TAG}" ]]; then
+        make release TAG="${EXTRA_TAG}"
+      fi
+
+      make release
+
+      if [[ "${TAG}" == "${LATEST_TAG}" ]]; then
+        make release TAG="latest"
+      fi
     fi
-
-    if [[ -n "${EXTRA_TAG}" ]]; then
-      make release TAG="${EXTRA_TAG}"
-    fi
-
-    make release
-
-    if [[ "${TAG}" == "${LATEST_TAG}" ]]; then
-      make release TAG="latest"
-    fi
-  fi
 
 notifications:
   on_failure: never
