--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,9 @@ services:
 env:
   global:
     - LATEST_TAG=3.3
-    - BASE_IMAGE_STABILITY_TAG=4.0.2
+    - BASE_IMAGE_STABILITY_TAG=4.1.0
   matrix:
-    - TAG=3.3 MATOMO_VER=3.3.0 EXTRA_TAG=3
+    - TAG=3.3 MATOMO_VER=3.3.0 PHP_VER=7.1 EXTRA_TAG=3
 
 script:
   - travis_retry make && make test
