--- a/.travis.yml
+++ b/.travis.yml
@@ -13,4 +13,4 @@ script:
   - travis_retry make && make test
 
 after_success:
-  - bash "${TRAVIS_BUILD_DIR}/travis_release"
+  - . "${TRAVIS_BUILD_DIR}/release.sh"
