--- a/test/docker-compose.yml
+++ b/test/docker-compose.yml
@@ -17,7 +17,7 @@ services:
       WODBY_APP_NAME: matomo
     volumes:
       - codebase:/var/www/html
-      - ./tests:/usr/local/bin/tests
+      - ./tests.sh:/usr/local/bin/tests.sh
 
 volumes:
   codebase:
