--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ services:
 env:
   global:
     - LATEST_TAG=3.5
+    - BASE_IMAGE_STABILITY_TAG=4.4.2
   matrix:
     - TAG=3.5 MATOMO_VER=3.5.0 EXTRA_TAG=3
 
