--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,7 @@ services:
   - docker
 
 env:
-  global:
-    - LATEST_TAG=3.5
-  matrix:
-    - TAG=3.5 MATOMO_VER=3.5.0 EXTRA_TAG=3
+  - MATOMO_VER=3.5.1 TAGS=3.5,3,latest
 
 script:
   - travis_retry make && make test
