--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,8 @@ services:
   - docker
 
 env:
-  - MATOMO_VER=3.6.1 TAGS=3.6,3,latest
+  matrix:
+    - MATOMO_VER=3.6.1 TAGS=3.6,3,latest
 
 script:
   - travis_retry make && make test
