--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,21 @@
 language: bash
 
 services:
-  - docker
+- docker
 
 env:
   matrix:
-    - MATOMO_VER=3.7.0 TAGS=3.7,3,latest
+  - MATOMO_VER=3.7.0 TAGS=3.7,3,latest
 
 script:
-  - travis_retry make && make test
+- travis_retry make && make test
 
 after_success:
-  - . "${TRAVIS_BUILD_DIR}/release.sh"
+- . "${TRAVIS_BUILD_DIR}/release.sh"
+
+notifications:
+  email:
+    recipients:
+    - travisci@wodby.com
+    on_success: never
+    on_failure: always
