--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,8 @@ services:
 - docker
 
 env:
-  matrix:
-  - MATOMO_VER=3.9.1 TAGS=3.9,3,latest
+- BASE_IMAGE_STABILITY_TAG=4.11.11
+- MATOMO_VER=3.9.1 TAGS=3.9,3,latest
 
 script:
 - travis_retry make && make test
