--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,9 @@ services:
 - docker
 
 env:
-- BASE_IMAGE_STABILITY_TAG=4.13.2
-- MATOMO_VER=3.13.1 TAGS=3.13,3,latest
+  global:
+  - BASE_IMAGE_STABILITY_TAG=4.13.2
+  - MATOMO_VER=3.13.1 TAGS=3.13,3,latest
 
 script:
 - travis_retry make && make test
