--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -12,6 +12,18 @@ env:
   BASE_IMAGE_STABILITY_TAG: 4.19.1
 
 jobs:
+  matomo-4:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - uses: ./.github/actions
+      with:
+        version: 4.1.1
+        php_ver: 7.2
+        tags: 4.1.1,4,latest
+        base_image_stability_tag: ${{ env.BASE_IMAGE_STABILITY_TAG }}
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
   matomo-3:
     runs-on: ubuntu-latest
     steps:
@@ -20,7 +32,7 @@ jobs:
       with:
         version: 3.14.1
         php_ver: 7.2
-        tags: 3.14,3,latest
+        tags: 3.14,3
         base_image_stability_tag: ${{ env.BASE_IMAGE_STABILITY_TAG }}
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
