--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -23,3 +23,14 @@ jobs:
         version: '4.8.0'
         php_ver: 8.1
         tags: 4.8,4,latest
+        alpine_ver: 3.15
+  matomo-4-alpine313:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - uses: ./.github/actions
+      with:
+        version: '4.8.0'
+        php_ver: 8.1
+        tags: 4.8-alpine3.13,4-alpine3.13,alpine3.13
+        alpine_ver: 3.13
